--- a/.github/workflows/prod_code_sync.yml
+++ b/.github/workflows/prod_code_sync.yml
@@ -6,7 +6,7 @@ on:
       - main
 
 jobs:
-  auto_merge:
+  sync_commit:
     runs-on: ubuntu-latest
 
     steps:
@@ -15,7 +15,7 @@ jobs:
 
       - name: Iterate over feature branches
         run: |
-          base_branch="${{ vars.DEFAULT_BRANCH }}"
+          base_branch="$DEFAULT_BRANCH"
           git checkout $base_branch
           git fetch $base_branch
           git reset --hard origin/$base_branch
