add slack curl to the workflow

--- a/.github/workflows/prod_code_sync.yml
+++ b/.github/workflows/prod_code_sync.yml
@@ -44,11 +44,13 @@ jobs:
                   --body "This pull request merges $base_branch into $feature_branch." \
                   --label "auto-update"                
                 if [ $? -ne 0 ]; then
-                  echo "Failed to create PR merging $base_branch into $feature_branch"
+                  msg = "Failed to create PR merging $base_branch into $feature_branch"
+                  curl -d "text=$msg" -d "channel=github-test" -H "Authorization: Bearer xoxb-3322043990433-6227823403830-KraD3HGXvkTztn2DAUqXaMUM" -X POST https://slack.com/api/chat.postMessage
                 fi
 
               else
-                echo "Failed to merge $base_branch into $feature_branch"
+                msg = "Failed to merge $base_branch into $feature_branch"
+                curl -d "text=$msg" -d "channel=github-test" -H "Authorization: Bearer xoxb-3322043990433-6227823403830-KraD3HGXvkTztn2DAUqXaMUM" -X POST https://slack.com/api/chat.postMessage
                 git merge --abort
               fi
             else
