--- a/.github/workflows/prod_code_sync.yml
+++ b/.github/workflows/prod_code_sync.yml
@@ -44,12 +44,15 @@ jobs:
                   --body "This pull request merges $base_branch into $feature_branch." \
                   --label "auto-update"                
                 if [ $? -ne 0 ]; then
-                  msg = "Failed to create PR merging $base_branch into $feature_branch"
+                  msg="Failed to create PR merging $base_branch into $feature_branch"
+                  echo $msg
                   curl -d "text=$msg" -d "channel=github-test" -H "Authorization: Bearer secrets.SLACK_TOKEN" -X POST https://slack.com/api/chat.postMessage
                 fi
 
               else
-                echo "Failed to merge $base_branch into the $feature_branch"
+                msg="Failed to merge $base_branch into the $feature_branch"
+                echo $msg
+                curl -d "text=$msg" -d "channel=github-test" -H "Authorization: Bearer secrets.SLACK_TOKEN" -X POST https://slack.com/api/chat.postMessage
                 git merge --abort
               fi
             else
