--- a/.github/workflows/prod_code_sync.yml
+++ b/.github/workflows/prod_code_sync.yml
@@ -46,13 +46,13 @@ jobs:
                 if [ $? -ne 0 ]; then
                   msg="Failed to create PR merging $base_branch into $feature_branch"
                   echo $msg
-                  curl -d "text=$msg" -d "channel=github-test" -H "Authorization: Bearer secrets.SLACK_TOKEN" -X POST https://slack.com/api/chat.postMessage
+                  curl -d "text=$msg" -d "channel=github-test" -H "Authorization: Bearer ${{ secrets.SLACK_TOKEN }}" -X POST https://slack.com/api/chat.postMessage
                 fi
 
               else
                 msg="Failed to merge $base_branch into the $feature_branch"
                 echo $msg
-                curl -d "text=$msg" -d "channel=github-test" -H "Authorization: Bearer secrets.SLACK_TOKEN" -X POST https://slack.com/api/chat.postMessage
+                curl -d "text=$msg" -d "channel=github-test" -H "Authorization: Bearer ${{ secrets.SLACK_TOKEN }}" -X POST https://slack.com/api/chat.postMessage
                 git merge --abort
               fi
             else
